--- a/main.css
+++ b/main.css
@@ -77,10 +77,29 @@ header {
 }
 
 .header-arrow {
+    
+}
+
+/* END OF HEADER  */
+
+/* FOOTER */
+
+footer {
+    position: absolute;
+    width: 93%;
+    height: 50px;
+    left: 15px;
+    bottom: 15px;
     border: 1px solid;
-    width: 50px;
-    height: 100%;
-    background-image: url(./img/header-img.png);
-    background-size: contain;
-    background-repeat: no-repeat;
+    display: flex;
+    justify-content: space-between; 
+}
+
+.about,
+.contacts {
+    width: 35%;
+    height: 70%;
+    border: 1px solid;
+    text-align: center;
+    
 }
